@@ -2,6 +2,7 @@
 
 	* Updated underscore.js to 1.13.7.
 	* Updated jQuery to 3.7.1.
+	* Update to manifest v3.
 
 2021-10-26  Nik Nyby  <nnyby@columbia.edu>
 
